# sentinal-image-based-sentiment-analysis

./: README.md  app.py  pyproject.toml  requirements.txt
project_test/: config.py
sentiment_model/: structs.py  training.py
src/: detector.py
src/face_recognition/: detect.py
src/sentiment_model/: detect.py
src/sentinal/: __init__.py  detector.py  utils.py
src/sentinal.egg-info/: PKG-INFO
src/sentinal/face_recognition/: __init__.py  detect.py
src/sentinal/sentiment_model/: __init__.py  detect.py  structs.py
static/js/: image.js
templates/: base.html  image.html  webcam.html
tests/: test_detector.py  test_face_recognition.py  test_sentiment_model.py
web-deployment/: app.py
web-deployment/static/css/: style.css
web-deployment/static/js/: webcam.js
